Skapat models, dock inte kopplat till webblänk i intressen

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server = LUPIN;database = SUT23UserAPIDB;Trusted_Connection = True;Integrated Security = True; TrustServerCertificate = True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
