--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server = LUPIN;database = SUT23UserAPIDB;Trusted_Connection = True;Integrated Security = True; TrustServerCertificate = True"
+    "DefaultConnection": "server = LUPIN;database = SUT23APILabb3;Trusted_Connection = True;Integrated Security = True; TrustServerCertificate = True"
   },
 
   "Logging": {
